Roundcube Webmail Quickrules
============================

2012 04 14
==========
 * Update for Roundcube framework

2012 01 21
==========
 * Update after r5781
 * Add inital support for Larry

2012 01 05
==========
 * Update after r5716

2011 01 18
==========
 * Add required plugin code (r4424)

2011 01 14
==========
 * Initial version