@@ -1,6 +1,10 @@
 Roundcube Webmail Quickrules
 ============================
 
+2012 04 16
+==========
+ * rcube_ui > rcube_utils (r6091)
+
 2012 04 14
 ==========
  * Update for Roundcube framework
